// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test K8sBlueGreenDeployStep should render edit view 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="formGroup sm"
    >
      <div
        class="bp3-form-group checkbox"
      >
        <div
          class="bp3-form-content"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiTypeInput--main"
          >
            <label
              class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox input StyledProps--main"
            >
              <input
                name="spec.skipDryRun"
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              pipelineSteps.skipDryRun
            </label>
            <span
              class="bp3-popover-wrapper MultiTypeInput--wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Test K8sBlueGreenDeployStep should render edit view as edit step 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="formGroup lg"
    >
      <div
        class="InputWithIdentifier--txtNameContainer TextInput--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
        >
          <p
            class="StyledProps--font StyledProps--main"
          >
            ID
            :
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class="bp3-editable-text InputWithIdentifier--idValue"
                tabindex="0"
              >
                <span
                  class="bp3-editable-text-content"
                  style="height: 1px; line-height: 1px; min-width: 0;"
                >
                  Test_A
                </span>
              </div>
            </span>
          </span>
          <span
            class="bp3-icon bp3-icon-edit StyledProps--main"
            icon="edit"
            style="vertical-align: middle; cursor: pointer;"
          >
            <svg
              data-icon="edit"
              height="12"
              viewBox="0 0 16 16"
              width="12"
            >
              <desc>
                edit
              </desc>
              <path
                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="name"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="k8BG_name"
            >
              name
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="name"
                type="text"
                value="Test A"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="formGroup sm"
    >
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="timeout"
        >
          pipelineSteps.timeoutLabel
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiTypeInput--main"
            style="flex-grow: 1;"
          >
            <div
              class="bp3-input-group bp3-fill"
            >
              <input
                class="bp3-input"
                name="timeout"
                placeholder="Enter w/d/h/m/s/ms"
                type="text"
                value="10m"
              />
            </div>
            <span
              class="bp3-popover-wrapper MultiTypeInput--wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="divider"
    />
    <div
      class="formGroup sm"
    >
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="spec.skipDryRun"
        >
          pipelineSteps.skipDryRun
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
          >
            <div
              class="TextInput--main MultiTypeInput--input"
            >
              <div
                class="bp3-input-group bp3-disabled"
              >
                <input
                  class="bp3-input"
                  disabled=""
                  name="spec.skipDryRun"
                  placeholder="<+input>"
                  type="text"
                  value="<+input>"
                />
              </div>
            </div>
            <span
              class="bp3-popover-wrapper MultiTypeInput--wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="MultiTypeInput--btn MultiTypeInput--RUNTIME"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="runtime-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 10 7.97"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                        fill="current-color"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test K8sBlueGreenDeployStep should render edit view as new step 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="formGroup lg"
    >
      <div
        class="InputWithIdentifier--txtNameContainer TextInput--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
        >
          <p
            class="StyledProps--font StyledProps--main"
          >
            ID
            :
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                tabindex="0"
              >
                <span
                  class="bp3-editable-text-content"
                  style="height: 1px; line-height: 1px; min-width: 0;"
                />
              </div>
            </span>
          </span>
          <span
            class="bp3-icon bp3-icon-edit StyledProps--main"
            icon="edit"
            style="vertical-align: middle; cursor: pointer;"
          >
            <svg
              data-icon="edit"
              height="12"
              viewBox="0 0 16 16"
              width="12"
            >
              <desc>
                edit
              </desc>
              <path
                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="name"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="k8BG_name"
            >
              name
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="name"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="formGroup sm"
    >
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="timeout"
        >
          pipelineSteps.timeoutLabel
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiTypeInput--main"
            style="flex-grow: 1;"
          >
            <div
              class="bp3-input-group bp3-fill"
            >
              <input
                class="bp3-input"
                name="timeout"
                placeholder="Enter w/d/h/m/s/ms"
                type="text"
                value="10m"
              />
            </div>
            <span
              class="bp3-popover-wrapper MultiTypeInput--wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="divider"
    />
    <div
      class="formGroup sm"
    >
      <div
        class="bp3-form-group"
      >
        <div
          class="bp3-form-content"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiTypeInput--main"
          >
            <label
              class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox input StyledProps--main"
            >
              <input
                name="spec.skipDryRun"
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              pipelineSteps.skipDryRun
            </label>
            <span
              class="bp3-popover-wrapper MultiTypeInput--wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test K8sBlueGreenDeployStep should render variable view 1`] = `
<div>
  <div
    class="variablesListTable"
  >
    <div
      class="variableListRow"
    >
      <div
        class="main"
      >
        <div
          class="text variable-name-cell"
        >
          <span
            class=""
          >
            timeout
          </span>
        </div>
        <div
          class="bp3-popover-wrapper btnWrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main copyIcon StyledProps--intent-primary Button--with-current-color Button--without-shadow"
              tabindex="0"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="copy-alt"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 8 9"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main"
        style="--text-line-clamp: 1;"
      >
        <span
          class=""
        >
          10m
        </span>
      </p>
    </div>
    <div
      class="variableListRow"
    >
      <div
        class="main"
      >
        <div
          class="text variable-name-cell"
        >
          <span
            class=""
          >
            skipDryRun
          </span>
        </div>
        <div
          class="bp3-popover-wrapper btnWrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main copyIcon StyledProps--intent-primary Button--with-current-color Button--without-shadow"
              tabindex="0"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="copy-alt"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 8 9"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main"
        style="--text-line-clamp: 1;"
      >
        <span
          class=""
        >
          &lt;+input&gt;
        </span>
      </p>
    </div>
  </div>
</div>
`;
